--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ p {
 
 
 .fourth-page {
- display: flex;
- justify-content: space-around;
+ display: grid;
+ grid-template-columns: 3fr 1fr;
  background-color: rgba(243, 236, 238, 0.968);
 }
 
@@ -158,6 +158,7 @@ p {
  align-items: center;
  text-align: center;
  margin-bottom: 0;
+ justify-content: center;
 }
 
 .last-button {
@@ -173,6 +174,7 @@ p {
 
 .center {
  text-align: center;
+ justify-content: center;
  font-weight: bolder;
  font-size: 50px;
  background-color: rgba(243, 236, 238, 0.968);
