--- a/style.css
+++ b/style.css
@@ -9,12 +9,62 @@ body {
  padding: 20;
 }
 
-
 header {
- display: flex;
- position: sticky;
+ width: 100%;
+ height: 80px;
+ display: block;
+}
+
+/* .main-logo {
+ position: fixed;
+} */
+
+.container {
  margin-top: 0;
- mix-blend-mode: lighten;
+}
+
+.container img {
+ width: 150px;
+ height: 60px;
+}
+
+.Nav {
+ height: 100%;
+ float: right;
+ list-style-type: none;
+}
+
+.inner-nav {
+ width: 40%;
+ height: 100%;
+ display: block;
+ margin: 0 auto;
+ background-color: #0d0c0c;
+}
+
+.Nav li {
+ color: #0d0c0c;
+ height: 100%;
+ display: table;
+ float: left;
+ padding: 0 30px;
+ margin: 0;
+}
+
+.Nav li a {
+ display: table-cell;
+ vertical-align: middle;
+ height: 100%;
+ color: #0d0c0c;
+ text-decoration: none;
+ font-weight: bolder;
+ margin: 0;
+ text-align: center;
+}
+
+
+.container-icon {
+ float: right;
 }
 
 p {
@@ -27,7 +77,6 @@ p {
  background-position: cover;
  background-size: cover;
  background-repeat: no-repeat;
- padding: 50px;
  justify-content: center;
  text-align: center;
 }
@@ -159,6 +208,7 @@ p {
  text-align: center;
  margin-bottom: 0;
  justify-content: center;
+ background-color: white;
 }
 
 .last-button {
